// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Switch Basic Usage 1`] = `
Object {
  "docs": "Render a toggle component using checkbox under the hood.",
  "html": "<div class=\\"drac-box\\">
  <input
    type=\\"checkbox\\"
    color=\\"purple\\"
    id=\\"demo\\"
    name=\\"demo\\"
    class=\\"drac-switch drac-checkbox drac-switch-purple\\"
    checked=\\"\\"
  /><label for=\\"demo\\" class=\\"drac-text drac-text-white\\">Checked</label>
</div>
",
  "react": "<Box>
  <Switch color=\\"purple\\" id=\\"demo\\" name=\\"demo\\" defaultChecked={true} />
  <label htmlFor=\\"demo\\" className=\\"drac-text drac-text-white\\">
    Checked
  </label>
</Box>;
",
  "title": "Usage",
}
`;

exports[`Site: Switch Colors 1`] = `
Object {
  "docs": "Switches can be customized to use any of the Dracula UI theme colors.",
  "html": "<div class=\\"drac-box\\">
  <input
    type=\\"checkbox\\"
    color=\\"cyan\\"
    id=\\"colors\\"
    name=\\"colors\\"
    class=\\"drac-switch drac-checkbox drac-switch-cyan\\"
  /><label for=\\"colors\\" class=\\"drac-text drac-text-cyan\\">Checked</label>
</div>
",
  "react": "<Box>
  <Switch color=\\"cyan\\" id=\\"colors\\" name=\\"colors\\" />
  <label htmlFor=\\"colors\\" className=\\"drac-text drac-text-cyan\\">
    Checked
  </label>
</Box>;
",
  "title": "Colors",
}
`;

exports[`Site: Switch Disabled 1`] = `
Object {
  "docs": "A disabled switch is unusable and un-clickable.",
  "html": "<div class=\\"drac-box\\">
  <div class=\\"drac-box\\">
    <input
      type=\\"checkbox\\"
      id=\\"one\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"one\\"
      class=\\"drac-switch drac-checkbox drac-switch-white\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
  </div>
  <div class=\\"drac-box\\">
    <input
      type=\\"checkbox\\"
      id=\\"two\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"two\\"
      class=\\"drac-switch drac-checkbox drac-switch-white\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Unchecked</label>
  </div>
</div>
",
  "react": "<Box>
  <Box>
    <Switch
      id=\\"one\\"
      disabled={true}
      defaultChecked={true}
      color=\\"white\\"
      name=\\"one\\"
    />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Checked
    </label>
  </Box>
  <Box>
    <Switch id=\\"two\\" disabled={true} color=\\"white\\" name=\\"two\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Unchecked
    </label>
  </Box>
</Box>;
",
  "title": "Disabled",
}
`;
